<resources>
    <string name="app_name">BlueJeansSDK</string>
    <string name="connecting">Connecting to meeting. Please wait.</string>
    <string name="connectingState">Connecting…</string>
    <string name="people_view">People View</string>
    <string name="gallery_view">Gallery View</string>
    <string name="speaker_view">Speaker View</string>
    <string name="custom_view">Custom View</string>
    <string name="video_layouts">Video Layouts</string>
    <string name="audio_devices">Audio Devices</string>
    <string name="video_devices">Video Devices</string>
    <string name="video_stream_styles">Video Stream Styles</string>
    <string name="video_layout">Video Layout</string>
    <string name="audio_device">Audio Device</string>
    <string name="video_device">Video Device</string>
    <string name="people">People</string>
    <string name="screen_share_notification_message">In Meeting, Content sharing is in progress.</string>
    <string name="meeting_notification_message">In Meeting</string>
    <string name="camera_setting_title">Slide to Zoom</string>
    <string name="participant">Participants</string>
    <string name="menu_option">"Menu "</string>
    <string name="end_meeting">End Meeting</string>
    <string name="content_share">Content Share</string>
    <string name="app_version">App Version</string>
    <string name="screen_share">Share screen</string>
    <string name="more_option">More</string>
    <string name="label_submit">Submit</string>
    <string name="log_comments">Comments.</string>
    <string name="pin">Pin</string>
    <string name="upload_logs_success">Logs uploaded successfully.</string>
    <string name="upload_logs_failure">Upload logs failed, Please try again.</string>
    <string name="upload_logs">Upload logs</string>
    <string name="me">Me</string>
    <string name="send_message">Send a Message</string>
    <string name="type_message">Type a message</string>
    <string name="chat">Chat</string>
    <string name="togglecc">CC</string>
    <string name="hd_capture">720 Capture</string>
    <string name="hd_receive">720 Receive</string>
    <string name="custom_video">Custom Video</string>
    <string name="show_isc">Show individual streams</string>
    <string name="stream_style">Video Stream Style</string>

    <string name="waiting_room">Waiting Room</string>
    <string name="waiting_room_message">You are in waiting room. Waiting for the moderator to approve/deny your join request.</string>
    <string name="exit_waiting_room">Exit Waiting Room</string>
    <string name="view_waiting_room">View Waiting Room</string>
    <string name="admit">Admit</string>
    <string name="deny">Deny</string>
    <string name="admit_all">Admit All</string>
    <string name="deny_all">Deny All</string>
    <string name="demote">Demote</string>
    <string name="no_wr_participants">There are no participants in waiting room</string>
    <string name="multiple_participants_arrived_wr">Multiple participants have arrived in the waiting room</string>
    <string name="multiple_participants_left_wr">Multiple participants have left the waiting room</string>
    <string name="reconnecting">Reconnecting...</string>
    <string name="reconnected">Reconnected</string>
    <string name="meeting_in_progress">A meeting is already in progress.</string>
    <string name="isc_use_case">ISC Use Cases</string>
    <string name="priority_error">Cannot set priority without changing resolution. Re-apply priority along with new resolution.</string>
    <string name="apply">Apply</string>
    <string name="press_back">Press back to exit</string>
    <string name="no_stream_styles">Cannot apply stream styles when ISC use cases are active.</string>
    <string name="no_individual_streams">\"Show individual streams\" was not selected while joining</string>
    <string name="no_video_device_change">You cannot change video device when custom video is in use.</string>

    <string-array name="stream_styles">
        <item>Fit To View</item>
        <item>Crop and Zoom</item>
    </string-array>

    <string-array name="isc_use_cases">
        <item>Remote Learning</item>
        <item>Remote Assist</item>
    </string-array>

    <string name="exit">Exit</string>
</resources>