<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_12dp"
        android:paddingBottom="@dimen/_12dp">

        <TextView
            android:id="@+id/tvVideoLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:text="@string/video_layout"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbVideoLayout"
            style="@style/MaterialDropDownButton"
            android:hint="@string/video_layout"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvVideoLayout"
            app:layout_constraintTop_toBottomOf="@id/tvVideoLayout" />

        <TextView
            android:id="@+id/tvAudioDevice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/audio_device"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/mbVideoLayout"
            app:layout_constraintTop_toBottomOf="@id/mbVideoLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbAudioDevice"
            style="@style/MaterialDropDownButton"
            android:hint="@string/audio_device"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvAudioDevice"
            app:layout_constraintTop_toBottomOf="@id/tvAudioDevice" />

        <TextView
            android:id="@+id/tvVideodevice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/video_device"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/mbAudioDevice"
            app:layout_constraintTop_toBottomOf="@id/mbAudioDevice" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbVideoDevice"
            style="@style/MaterialDropDownButton"
            android:layout_marginBottom="@dimen/_8dp"
            android:hint="@string/video_device"
            app:layout_constraintBottom_toTopOf="@id/tvStreamStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvVideodevice"
            app:layout_constraintTop_toBottomOf="@id/tvVideodevice" />

        <TextView
            android:id="@+id/tvStreamStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/stream_style"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/mbAudioDevice"
            app:layout_constraintTop_toBottomOf="@id/mbVideoDevice" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbVideoStreamStyle"
            style="@style/MaterialDropDownButton"
            android:hint="@string/stream_style"
            app:layout_constraintBottom_toTopOf="@id/tvIscUseCases"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/tvStreamStyle"
            app:layout_constraintTop_toBottomOf="@id/tvStreamStyle" />

        <TextView
            android:id="@+id/tvIscUseCases"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/isc_use_case"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/mbAudioDevice"
            app:layout_constraintTop_toBottomOf="@id/mbVideoStreamStyle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbIscUseCases"
            style="@style/MaterialDropDownButton"
            android:hint="@string/isc_use_case"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/horizontalLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/tvIscUseCases"
            app:layout_constraintTop_toBottomOf="@id/tvIscUseCases" />

        <View
            android:id="@+id/horizontalLine"
            style="@style/MaterialDropDownButton"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mbIscUseCases" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swHDReceive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hd_receive"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontalLine" />

        <LinearLayout
            android:id="@+id/layoutSwitches"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/swHDReceive">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swHDCapture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hd_capture"
                android:layout_weight="1" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swClosedCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/togglecc"
                android:layout_weight="1" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swCustomVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_video"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llWaitingRoom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutSwitches">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swWaitingRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/waiting_room" />

            <Button
                android:id="@+id/btnShowWaitingRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8dp"
                android:layout_weight="0.5"
                android:text="@string/view_waiting_room" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>